--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 db.sqlite3
 
-**/migrations/
+**/migrations/**
 !**/migrations
 !**/migrations/__init__.py
 
 __pycache__/
-*__pycache__/
+*/__pycache__/
+.pyc
 
 media/
 !media/background
