--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.7.2
 Django==4.2.2
+easy-thumbnails==2.8.5
 Pillow==9.5.0
+six==1.16.0
 sqlparse==0.4.4
+transliterate==1.10.2
 typing_extensions==4.6.3
